# senscord-rpicam-imx500

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  clone_senscord_dev.sh  devcontainer.json
.github/workflows/: run_unit_test.yml
public/: CMakeLists.txt
public/assets/config/ai_camera/: env.conf  setup_env.sh
public/assets/config/ai_camera/config/: senscord.xml  senscord_connections.xml  senscord_server.xml
public/assets/rpi-camera-assets/: custom.json  custom_vga_itonly.json
public/component/: CMakeLists.txt
public/component/inference_property_converter/: CMakeLists.txt
public/component/inference_property_converter/include/senscord/inference_stream/: inference_stream_types.h
public/component/inference_property_converter/include/senscord/inference_stream/c_api/: property_c_types.h
public/component/inference_property_converter/src/: inference_property_converter.cpp  inference_property_converter.h
public/component/libcamera_image/: CMakeLists.txt
public/component/libcamera_image/config/: component_libcamera_image.xml
public/component/libcamera_image/include/senscord/libcamera_image/: AnyValue.h  libcamera_image_types.h
public/component/libcamera_image/src/: libcamera_image_sensor_register.cpp  libcamera_image_sensor_register.h  libcamera_image_stream_source.cpp  libcamera_image_stream_source.h  libcamera_image_stream_source_factory.cpp  rpicam_app_adapter.cpp  rpicam_app_adapter.h  v4l2_ctrl_manager.cpp  v4l2_ctrl_manager.h
rpicam-apps/: CMakeLists.txt
rpicam-apps/core/: buffer_sync.cpp  buffer_sync.hpp  completed_request.hpp  dma_heaps.cpp  dma_heaps.hpp  frame_info.hpp  logging.hpp  metadata.hpp  options.cpp  options.hpp  post_processor.cpp  post_processor.hpp  rpicam_app.cpp  rpicam_app.hpp  rpicam_encoder.hpp  still_options.hpp  version.hpp  video_options.hpp
rpicam-apps/image/: bmp.cpp  dng.cpp  image.hpp  jpeg.cpp  png.cpp  yuv.cpp
rpicam-apps/output/: circular_output.cpp  circular_output.hpp  file_output.cpp  file_output.hpp  net_output.cpp  net_output.hpp  output.cpp  output.hpp
rpicam-apps/post_processing_stages/: hdr_stage.cpp  histogram.cpp  histogram.hpp  motion_detect_stage.cpp  negate_stage.cpp  object_detect.hpp  post_processing_stage.cpp  post_processing_stage.hpp  pwl.cpp  pwl.hpp  segmentation.hpp
rpicam-apps/post_processing_stages/imx500/: imx500_no_process.cpp  imx500_object_detection.cpp  imx500_posenet.cpp  imx500_post_processing_stage.cpp  imx500_post_processing_stage.hpp
rpicam-apps/preview/: null_preview.cpp  preview.cpp  preview.hpp
test/: README_UT.md  README_UT_ja.md
test/mock/malloc/: CMakeLists.txt  malloc_mock.cc  malloc_mock.h
test/sample/: CMakeLists.txt  README.md  sample_gtest.cc  sample_mock.cc  sample_mock.h  sample_src.c  sample_src.h  sample_sub.h
test/scripts/: env_setup.sh  exec_unit_test.sh  run_unit_test.sh
